# advent_of_code

./: .gitignore  Cargo.toml  flake.nix
day_1/src/: main.rs
day_2/src/: main.rs
day_3/src/: main.rs
day_4/src/: main.rs
day_5/src/: main.rs
day_6/src/: main.rs
src/: main.rs
src/util/: direction.rs  matrix.rs  mod.rs  position.rs
src/year2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/year2025/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
